<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization_feature.presentation.MainActivity">

    <TextView
        android:id="@+id/authorization_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authorizationEmailTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/authorization_email_hint"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_textView">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorizationLoginTextField"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authorizationPasswordTextInputLayout"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/authorization_password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorizationEmailTextInputLayout">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authorizationPasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registration_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/authorization_create_account"
        app:layout_constraintBottom_toBottomOf="@+id/authorization_button"
        app:layout_constraintStart_toStartOf="@+id/authorizationPasswordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/authorizationPasswordTextInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authorization_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/black"
        android:text="@string/authorization_register_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/authorizationPasswordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/authorizationPasswordTextInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>